@@ -1,0 +1,18 @@
+
+##' @rdname anytime_cpp
+anytime <- function(x, tz=Sys.getenv("TZ", unset="UTC")) {
+
+    if (inherits(x, "POSIXt")) {
+        return(as.POSIXct(x, tz=tz))
+    }
+
+    if (inherits(x, "Date")) {
+        ## we format and reparse to get proper midnight in TZ treatment
+        ## if we used as.Date() we would get midnight at UTC which is rarely desired
+        ## x <- format(x)
+        ## or not -- stick with what R does
+        return(as.POSIXct(x))
+    }
+
+    anytime_cpp(x, tz=tz)
+}
