@@ -1,10 +1,13 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/RcppExports.R
+% Please edit documentation in R/RcppExports.R, R/anytime.R
 \name{anytime_cpp}
+\alias{anytime}
 \alias{anytime_cpp}
 \title{Parse POSIXct objects from input data}
 \usage{
 anytime_cpp(x, tz = "UTC")
+
+anytime(x, tz = Sys.getenv("TZ", unset = "UTC"))
 }
 \arguments{
 \item{x}{A vector of type character, integer or numeric with
